# portail

./: .dockerignore  .editorconfig  .env.example  .envrc  .envrc.example  .gitattributes  .gitignore  .ignore  .versions  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.multi  LOOP_STATE.md  PHILOSOPHY.md  README.md  RELEASE.md  SECURITY.md  START_HERE.md  TASKS.md  TASKS_V0.2.md  Taskfile.yml  _next_task.md  build.rs  complexity-report.toml  crush.json  deny.toml  flake.nix  justfile  opencode.json  portail.example.toml  portail.toml.history  spec.routes.toml
.cargo/: config.toml
.deepseek/state/: subagents.v1.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  mcp.json  mergeable.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  loop-engineering-implementation.md
.github/workflows/: agent-build.yml  architecture-helper.yml  benchmark-gate.yml  benchmark-pipeline.yml  chore-bot.yml  ci.yml  complexity.yml  docker.yml  e2e-self-hosted.yml  e2e.yml  loop-state-pm.yml  nix.yml  pr-governance.yml  ralph-loop.yml  release.yml  trending-packages.yml
.harness-memory/: memory.sqlite
.opencode/: package.json
.opencode/commands/: harness-memory-add.md  harness-memory-dream.md  harness-memory-extract.md  harness-memory-init.md  harness-memory-list.md  harness-memory-review.md  harness-memory-stats.md  harness-memory-why.md
.qwen/skills/auto-skill-git-rebase-conflicts/: SKILL.md
.qwen/skills/auto-skill-rust-workspace-repair/: SKILL.md
benches/: hot_paths.rs
crates/loop-state-manager/: Cargo.toml
crates/loopeng/: Cargo.toml
crates/loopeng/src/: engine.rs  executor.rs  lib.rs  types.rs
crates/pkg-ctx/: Cargo.toml
crates/pkg-ctx/src/: build.rs  chunker.rs  lib.rs  mcp_server.rs  memory.rs  search.rs  storage.rs
crates/portail-agents/: Cargo.toml
crates/portail-agents/src/: lib.rs  nullclaw.rs  pit.rs  zeroclaw.rs
crates/portail-agents/src/ci/: chore.rs  drift.rs  fuzz_route.rs  mod.rs  research.rs  runner.rs  spec_verify.rs
crates/portail-claude-plugins/: Cargo.toml
crates/portail-claude-plugins/src/: bridge.rs  lib.rs  manifest.rs  marketplace.rs  plugin.rs  skill.rs  trust.rs
crates/portail-mcp-gateway/: Cargo.toml
crates/portail-mcp-gateway/src/: lib.rs
crates/portail-mcp-wasm/: Cargo.toml
crates/portail-mcp-wasm/src/: lib.rs  plugin.rs  server.rs
crates/portail-plugin-sdk/: Cargo.toml
crates/portail-plugin-sdk/src/: lib.rs
crates/portail-vaked/: Cargo.toml
crates/portail-vaked/src/: lib.rs
creative_tui/: Cargo.toml  flake.nix  shader.wgsl
creative_tui/src/: app.rs  gfx_thread.rs  lib.rs  main.rs  shell.rs  types.rs
docs/: CHORE_BOT_DESIGN.md  DEPLOY_TLS.md  E2E_BENCHMARK.md  E2E_SCENARIOS.md  E2E_TEST_STRATEGY.md  README.md  RELEASE_AUDIT_V2_PLAN.md  V2_0_PLAN.md  V2_0_REQUIREMENTS.md  V2_1_V2_2_PLAN.md  V2_1_V2_3_PLAN.md  _config.yml  adk-rust-cheatsheet.md  demo.html  email-to-rust-optimization-author.md  index.html  mcp-gateway-architecture.md
docs/ai-services/: README.md
docs/api-docs/: scalar.html
docs/architecture/: ABSTRACTION_REVIEW.md  ARCHITECTURE_DECISIONS.md  BOW_SPEC.md  DATA_FLOW.md  DATA_STRUCTURES.md  DEPLOYMENT.md  DESIGN.md  MODULE_MAP.md  NETWORK_DESIGN.md  OTLP_GRAFANA_SPEC.md  PRODUCT.md  V2_0_PLAN.md  V3_ARCHITECTURE_KNOWLEDGE.md  V3_ROADMAP.md  V4_PLAN.md  index.md  loop-engineering.md
docs/cheatsheets/: connection-upgrader.md  gix.md  mcp.md  rust-ai-stack.md
docs/contributors/: CONTRIBUTING.md  OPENCODE_MUX.md  RELEASE.md
docs/demos/: git-intercept-demo.md
docs/layers/: README.md
examples/plugins/request-logger/: Cargo.toml  plugin.vaked
examples/plugins/request-logger/src/: lib.rs
nix/: ai-services.nix  mcp-plugin.nix  module.nix  opencode-mux.nix  package.nix
nix/opencode-mux/: default.json
notebooks/: README.md  portail_viz.py
nushell/: config.nu  env.nu  fleet.nu  ohmy-slim.nu  portail.nu
packaging/aur/: PKGBUILD
packaging/flatpak/: com.peterlodri.portail.metainfo.xml
packaging/homebrew/: portail.rb
packaging/rpm/: portail.spec
packaging/snap/: snapcraft.yaml
plugins/portail-mcp/: pyproject.toml
plugins/portail-mcp/portail_mcp/: __init__.py  gateway.py  server.py
scripts/: architecture-helper.sh  complexity-analysis.ab  complexity-analysis.sh  contributor-setup.sh  docgen.sh  docker-build-multi.sh  e2e-test.sh  install.sh  loop-state-pm.sh  pr-governance.sh  ralph-loop.sh  rust-chore.sh  setup-webhook.sh  trending-packages.sh
src/: auth.rs  base_hooks.rs  build_info.rs  config.rs  config_watcher.rs  constants.rs  cost_attribution.rs  drift.rs  file_cache.rs  fuzz_route.rs  graphql.rs  lib.rs  lints.rs  local_inference.rs  main.rs  nats_bridge.rs  plugin_hooks.rs  prompt_versioning.rs  proxy.rs  rate_limit.rs  release_audit.rs  semantic_cache.rs  sessions.rs  shutdown.rs  spec_verify.rs  store.rs  supervisor.rs  target_router.rs  telemetry.rs  test_utils.rs  types.rs  upgrader.rs
src/a2a/: README.md  mod.rs  registry.rs
src/a2c/: README.md  mod.rs
src/bow/: audit.rs  crypto.rs  key.rs  mod.rs
src/cdn/: README.md  cache.rs  mod.rs  purge.rs
src/ci/: mod.rs
src/cli/: amberify.rs  complexity.rs  dashboard.rs  dev.rs  doctor.rs  guide.rs  init.rs  install.rs  learn.rs  mod.rs  setup.rs
src/discovery/: mod.rs
src/dns/: README.md  mod.rs  reliability.rs
src/dpdk/: mod.rs
src/ebpf/: mod.rs
src/events/: README.md  mod.rs
src/gateway/: README.md  features.rs  function_calling.rs  mod.rs  schema.rs
src/godfather/: mod.rs
src/hooks/: README.md  mod.rs
src/hyper_engine/: mod.rs
src/iouring/: mod.rs
src/mcp/: README.md  mod.rs
src/nullclaw/: mod.rs
src/orchestrator/: mod.rs
src/plugins/: mod.rs  redis_cache.rs  tinyurl.rs  tinyurl_README.md  tracer.rs
src/proxy/: README.md
src/sentinel/: README.md  mod.rs
src/store/: mod.rs  nats_backend.rs  queries.rs  rusqlite_backend.rs  schema.rs  sqlx_backend.rs
tests/: e2e.rs  e2e_v3.rs  layer_tests.rs  proptests.rs  v0_2_integration.rs
(+21 files in other folders)
