[workspace]
resolver = "2"
members = ["."]

[package]
name = "portail"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Unified proxy/gateway: AI Gateway + MCP Gateway + CDN cache"
homepage = "https://github.com/peterlodri-sec/portail"
repository = "https://github.com/peterlodri-sec/portail"
license = "MIT"
keywords = ["proxy", "gateway", "ai", "mcp", "cdn"]
categories = ["web-programming::http-server", "network-programming", "caching"]
readme = "README.md"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
reqwest = { version = "0.12", features = ["json", "http2", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
moka = { version = "0.12", features = ["future"] }
async-nats = "0.39"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
anyhow = "1"
blake3 = "1"
tokio-stream = { version = "0.1", features = ["fs", "sync"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
mimalloc = "0.1"
rustc-hash = "2"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
walkdir = "2"
which = "7"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
incremental = true

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "hot_paths"
harness = false

[package.metadata.deb]
maintainer = "Peter Lodri <peterlodri-sec@github.com>"
copyright = "2026, Peter Lodri <peterlodri-sec@github.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
Portail is a unified proxy and gateway for AI services, MCP tools, \
and CDN caching. Built in Rust with zero-copy I/O, SIMD-optimized \
hashing, and a live TUI dashboard."""
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/portail", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/portail/README", "644"],
    ["LICENSE", "usr/share/doc/portail/LICENSE", "644"],
]

[package.metadata.deb.systemd-units]
enable = true
