[workspace]
resolver = "2"
members = [".", "creative_tui"]

[package]
name = "portail"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"
description = "Unified proxy/gateway: AI Gateway + MCP Gateway + CDN cache"
homepage = "https://github.com/peterlodri-sec/portail"
repository = "https://github.com/peterlodri-sec/portail"
license = "MIT"
keywords = ["proxy", "gateway", "ai", "mcp", "cdn"]
categories = ["web-programming::http-server", "network-programming", "caching"]
readme = "README.md"

[dependencies]
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
reqwest = { version = "0.12", features = ["json", "http2", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
moka = { version = "0.12", features = ["future"] }
async-nats = "0.39"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
anyhow = "1"
blake3 = "1"
tokio-stream = { version = "0.1", features = ["fs", "sync"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
mimalloc = "0.1"
rustc-hash = "2"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
walkdir = "2"
which = "7"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dirs = "5"

# v0.6 — system resource monitor (Godfather)
sysinfo = "0.32"

# v0.6 — file cache (content-addressable, ~500MB fort)
cacache = { version = "13", features = ["mmap"] }

# v0.2 — rate limiting
governor = { version = "0.7", features = ["std"] }

# v0.2 — authentication
jsonwebtoken = "9"
base64 = "0.22"

# v0.2 — persistent event store
rusqlite = { version = "0.33", features = ["bundled"] }

# v2.0 — NATS-replicated event store (optional, free/libre)
# libsql removed: Turso is not free. Replaced with NATS-based replication.

# v0.2 — OpenTelemetry OTLP
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "metrics"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.28"

# v0.6 — GraphQL API
async-graphql = "7"
async-stream = "0.3"

[features]
default = []
store-nats = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
incremental = true

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1"

[[bench]]
name = "hot_paths"
harness = false

[package.metadata.deb]
maintainer = "Peter Lodri <peterlodri-sec@github.com>"
copyright = "2026, Peter Lodri <peterlodri-sec@github.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
Portail is a unified proxy and gateway for AI services, MCP tools, \
and CDN caching. Built in Rust with zero-copy I/O, SIMD-optimized \
hashing, and a live TUI dashboard."""
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/portail", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/portail/README", "644"],
    ["LICENSE", "usr/share/doc/portail/LICENSE", "644"],
]

[package.metadata.deb.systemd-units]
enable = true
