cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = [".", "crates/pkg-ctx", "crates/portail-agents", "crates/portail-claude-plugins", "crates/portail-plugin-sdk", "crates/portail-vaked", "crates/loop-state-manager", "crates/loopeng", "crates/portail-mcp-wasm"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/peterlodri-sec/portail"

[package]
name = "portail"
version = "2.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Unified proxy/gateway: AI Gateway + MCP Gateway + CDN cache"
repository.workspace = true
keywords = ["proxy", "gateway", "ai", "mcp", "cdn"]
categories = ["web-programming::http-server", "network-programming", "caching"]
readme = "README.md"

[lib]
test = true
doctest = true
bench = true

[dependencies]
axum = { version = "=0.8.9", features = ["macros", "ws"] }
tokio = { version = "=1.52.3", features = ["full"] }
tower = { version = "=0.5.3", features = ["util"] }
tower-http = { version = "=0.6.11", features = ["cors", "trace", "limit"] }
reqwest = { version = "=0.12.28", features = ["json", "http2", "blocking"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
toml = "=0.8.23"
clap = { version = "=4.6.1", features = ["derive", "env"] }
clap_complete = "=4.5.44"
moka = { version = "=0.12.15", features = ["future"] }
async-nats = "=0.48.0"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "json"] }
tracing-appender = "=0.2.5"
futures = "=0.3.32"
uuid = { version = "=1.23.4", features = ["v4"] }
bytes = "=1.12.0"
anyhow = "=1.0.103"
blake3 = "=1.8.5"
tokio-stream = { version = "=0.1.18", features = ["fs", "sync"] }
metrics = "=0.24.6"
metrics-exporter-prometheus = "=0.16.2"
mimalloc = "=0.1.52"
tikv-jemallocator = { version = "=0.6.1", optional = true }
portail-agents = { path = "crates/portail-agents" }
portail-plugin-sdk = { path = "crates/portail-plugin-sdk" }
portail-vaked = { path = "crates/portail-vaked" }
loop-state-manager = { path = "crates/loop-state-manager" }
loopeng = { path = "crates/loopeng" }
pkg-ctx = { path = "crates/pkg-ctx" }
portail-mcp-wasm = { path = "crates/portail-mcp-wasm" }
portail-claude-plugins = { path = "crates/portail-claude-plugins" }
rustc-hash = "=2.1.2"
chrono = { version = "=0.4.45", features = ["serde"] }
regex = "=1.12.4"
walkdir = "=2.5.0"
which = "=7.0.3"
redis = { version = "=0.27.6", features = ["tokio-comp", "connection-manager"] }
hmac = "=0.12.1"
sha2 = "=0.10.9"
hex = "=0.4.3"
figment = { version = "=0.10.19", features = ["toml", "env"] }
dotenvy = "=0.15.7"
dirs = "=5.0.1"

# v0.6 — system resource monitor (Godfather)
sysinfo = "=0.32.1"

# v0.6 — file cache (content-addressable, ~500MB fort)
cacache = { version = "=13.1.0", features = ["mmap"] }

# v0.2 — rate limiting
governor = { version = "=0.7.0", features = ["std"] }

# v0.2 — authentication
jsonwebtoken = "=9.3.1"
base64 = "=0.22.1"

# v2.x — SSL: AWS-LC (optimized, FIPS-compliant). Replaces OpenSSL.
aws-lc-rs = { version = "=1.17.0", optional = true }

# v0.2 — persistent event store
rusqlite = { version = "=0.33.0", features = ["bundled"] }

# v2.x — sqlx async SQLite (primary backend, compile-time checked queries)
sqlx = { version = "=0.9.0", features = ["runtime-tokio", "sqlite", "migrate"] }

# v2.x — BOW encrypted secret store
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive"] }
rpassword = "7"
thiserror = "2"

# v0.2 — OpenTelemetry OTLP
opentelemetry = "=0.27.1"
opentelemetry_sdk = { version = "=0.27.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "=0.27.0", features = ["grpc-tonic", "metrics"] }
opentelemetry-semantic-conventions = "=0.27.0"
tracing-opentelemetry = "=0.28.0"

# v0.6 — GraphQL API
async-graphql = "=7.2.1"
async-stream = "=0.3.6"
async-trait = "=0.1.89"

[features]
default = []
store-nats = []
aws-lc = ["dep:aws-lc-rs"]
jemalloc = ["dep:tikv-jemallocator"]
portail_system_alloc = []

[workspace.lints]
clippy.len_without_is_empty = "allow"
clippy.needless_pass_by_value = "allow"
clippy.too_many_arguments = "allow"
clippy.if_same_then_else = "allow"
clippy.large_enum_variant = "allow"

[workspace.dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tokio = { version = "=1.52.3", features = ["full"] }
tracing = "=0.1.44"
anyhow = "=1.0.103"
chrono = { version = "=0.4.45", features = ["serde"] }
reqwest = { version = "=0.12.28", features = ["json", "http2", "blocking"] }
sha2 = "=0.10.9"
hex = "=0.4.3"
async-trait = "=0.1.89"
futures = "=0.3.32"
walkdir = "=2.5.0"
dirs = "=5.0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
incremental = true

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false

[dev-dependencies]
criterion = { version = "=0.5.1", features = ["html_reports", "async_tokio"] }
proptest = "=1.11.0"
loopeng = { path = "crates/loopeng" }
pkg-ctx = { path = "crates/pkg-ctx" }
tokio = { workspace = true }

[build-dependencies]
chrono = "=0.4.45"
utoipa = "5"

[[bench]]
name = "hot_paths"
harness = false

[package.metadata.deb]
maintainer = "Peter Lodri <peterlodri-sec@github.com>"
copyright = "2026, Peter Lodri <peterlodri-sec@github.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
Portail is a unified proxy and gateway for AI services, MCP tools, \
and CDN caching. Built in Rust with zero-copy I/O and SIMD-optimized \
hashing."""
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/portail", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/portail/README", "644"],
    ["LICENSE", "usr/share/doc/portail/LICENSE", "644"],
]

[package.metadata.deb.systemd-units]
enable = true
