[package]
name = "loopeng"
version = "3.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Loop Engineering primitives + engine — plan/execute/evaluate/decide, 5 building blocks, _next-prompt"
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = "=1.0.150"
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = "=2.0.18"
uuid = { version = "=1.23.4", features = ["v4"] }
regex = "=1.12.4"
