[package]
name = "pkg-ctx"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Local-first documentation MCP server — git clone, index, search, serve"
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "rt", "macros"] }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rusqlite = { version = "=0.33.0", features = ["bundled", "backup"] }
walkdir = { workspace = true }
futures = { workspace = true }
