[package]
name = "portail-agents"
version = "2.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Internal agents for Portail: nullclaw heartbeat, CI loop agents (drift, spec-verify, fuzz-route, chore)"
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = "=1.0.150"
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
