[package]
name = "portail-claude-plugins"
version = "0.1.0"
edition = "2024"
description = "Claude Code plugin system for Portail — parse, load, and bridge Claude plugins into MCP tools"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.13"
tracing = "0.1"
walkdir = "2"
uuid = { version = "=1.23.4", features = ["v4"] }
blake3 = "1"
tokio = { version = "1", features = ["rt", "fs", "io-util"] }

[lints]
workspace = true
