[package]
name = "portail-mcp-gateway"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Embedded MCP Gateway for Portail — wraps mcp-gateway crate as a native Rust MCP routing layer"

[dependencies]
mcp-gateway = "=2.6.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
metrics = "0.24"

[lints]
workspace = true
