[package]
name = "portail-plugin-sdk"
version = "3.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Portail Plugin SDK — build WASM-compiled plugins with bulletproof DX"
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = "=1.0.150"
anyhow = "=1.0.103"
toml = "=0.8.23"
