[package]
name = "portail-vaked"
version = "3.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Portail .vaked plugin host — load WASM plugins, parse .vaked files, lower to Nix"
repository.workspace = true

[dependencies]
portail-plugin-sdk = { path = "../portail-plugin-sdk" }
serde = { workspace = true }
serde_json = "=1.0.150"
toml = "=0.8.23"
anyhow = "=1.0.103"
tracing = { workspace = true }
walkdir = { workspace = true }
