[package]
name = "request-logger"
version = "1.0.0"
edition = "2021"

# Compile to WASM for the Portail plugin host
[lib]
crate-type = ["cdylib"]

[dependencies]
portail-plugin-sdk = { path = "../../../crates/portail-plugin-sdk" }
extism-pdk = "1.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
